<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tekila</string>
    <string name="action_add">Añadir</string>
    <string name="action_cancelar">Cancelar</string>
    <string name="action_save">Guardar</string>
    <string name="action_delete">Borrar</string>
    <string name="action_OK">OK</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_compra">Añadir Compra</string>
    <string name="action_save_compra">Guardar Compra</string>
    <string name="action_delete_compra">Borrar Compra</string>
    <string name="action_grupos">Grupos</string>
    <string name="action_usuarios">Usuarios</string>
    <string name="action_cambiar_grupo">Cambiar de grupo</string>
    <string name="label_compra_quien_paga">¿Quién paga?</string>
    <string name="label_compra_quien_participa">¿Quién participa?</string>
    <string name="label_compra_cantidad">Total:</string>
    <string name="label_compra_concepto">¿Qué se ha comprado?</string>
    <string name="label_compra_fecha">¿Cuándo?</string>
    <string name="label_compra_error_concepto_vacio">Debes añadir lo que se ha comprado</string>
    <string name="label_compra_error_pagadores_vacio">Debes añadir algún pagador</string>
    <string name="label_compra_error_participantes_vacio">Debes añadir algún participante</string>
    <string name="label_inserta_pagadores">Inserta pagadores</string>
    <string name="label_participantes_todos">Todos</string>
    <string name="label_estas_seguro">¿Estás seguro?</string>
    <string name="label_yes">Si</string>
    <string name="label_no">No</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_compra">Añadir Compra</string>
    <string name="label_concepto_ejemplp">Por ejemplo, tabaco y tekila</string>
    <string name="label_total_compra">Total:</string>
    <string name="title_activity_usuarios">Usuarios</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_grupos">Grupos</string>
    <string name="title_activity_add_or_edit_grupo">Añadir Grupo</string>
    <string name="title_activity_add_or_edit_usuario">Añadir Usuario</string>
    <string name="label_nombre">nombre</string>
    <string name="label_usuario_con_datos_asociados">El usuario tiene datos asociado. No se puede eliminar</string>
    <string name="label_no_implementado">Funcionalidad por implementar</string>
    <string name="label_usuarios_asociados">Usuarios asociados</string>
    <string name="label_hay_que_crear_un_grupo">Antes de nada debes crear un grupo</string>
    <string name="label_selecciona_grupo">Selecciona un grupo</string>


</resources>
