<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Main" >
    <item android:id="@+id/action_add_compra"
        android:title="@string/action_add_compra"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="always" />

    <item android:id="@+id/action_usuarios"
        android:title="@string/action_usuarios"
        android:orderInCategory="100"
        android:showAsAction="always" />

    <item android:id="@+id/action_grupos"
        android:title="@string/action_grupos"
        android:orderInCategory="100"
        android:showAsAction="always" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
