<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="jazzyweb.tekila.usuarios.AddOrEditUsuarioActivity" >
    <item android:id="@+id/action_addoreditusuario_cancel"
        android:title="@string/action_cancelar"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_cancel"
        android:showAsAction="always" />

    <item android:id="@+id/action_addoreditusuario_delete"
        android:title="@string/action_delete"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_discard"
        android:showAsAction="always" />

    <item android:id="@+id/action_addoreditusuario_save"
        android:title="@string/action_save"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_accept"
        android:showAsAction="always" />
</menu>
